Add bulk chain crafting
Bulk requests that need intermediates now start a bulk chain session
instead of being rejected: the new BulkChainCraftController repeatedly
re-plans a chain batch from live inventory + nearby counts and hands it
to ChainCraftController until the requested amount is reached or
materials run out. Re-planning each batch means byproducts and surplus
intermediates from earlier batches are consumed before new ones are
crafted.

- Confirmation popup predicts the materials-limited achievable count
  for both exact requests and Ctrl+Shift refillable max requests
- ChainInventoryFitEstimator sizes each batch so staged materials,
  in-flight intermediates, and outputs fit the player inventory
  (non-stackable intermediates like bows shrink the batch instead of
  clogging); stops with a clear message when even one copy cannot fit
- Final chain step runs at flat bulk speed: single shift place plus a
  rapid restage loop, with direct eject parity while more iterations
  remain (confirm-then-credit so ejected counts match reality) and
  FINAL_BATCH_KEEP-style banking on the last iteration
- Chain settlement counts the cursor and result slot, tracks ejected
  output, and stows carried stacks before scheduling steps so recipe
  placement never misses an ingredient stuck on the cursor
- Withdrawals accumulate across a session's staging trips and leftover
  pulled materials return to their source chests on session end
- planMax reuses one planner (one recipe index build) across its binary
  search and accepts single-step plans for bulk so leftover
  intermediates keep the search monotonic
- Fix four upstream hold-mode latch kill paths: Alt key-repeat arming
  the re-held cancel, the confirm popup screen swap wiping hold state
  and pulled-resource tracking, cancelToggle killing latched sessions
  on any key while Alt is held, and Alt-in-request releases; bulk chain
  sessions also re-assert the latch at start as defense in depth
- Config toggle (default on), RE